search engine made up

--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
 	<meta charset="utf-8">
 	<script>
 		// TODO: create a handler
-    window.addEventListener("load", function(){
-        // TODO: register the handler
-    });
+		function setSearchEngine() {
+			let searchEngine = document.querySelector("input[name=engine]:checked");
+			console.log(searchEngine.value);
+			
+			let choice = searchEngine.value;
+
+			let actions = {
+				"google": "https://www.google.com/",
+				"duckDuckGo": "https://duckduckgo.com/",
+				"bing": "https://www.bing.com/search",
+				"ask": "https://www.ask.com/web"
+			};
+		
+			let url = actions[choice];
+
+			let form = document.getElementById("searchForm");
+			
+			form.setAttribute("action", url);
+
+		};
+		
+    	window.addEventListener("load", function(){
+			let form = document.querySelector("form");
+			form.addEventListener("submit", setSearchEngine);
+    	});
 	</script>
 </head>
 
@@ -14,6 +36,15 @@
 
 	<form id="searchForm">
     <!-- TODO: add form elements -->
+		
+		<label><input type="text" name="q"/></label>
+
+		<label>Google<input type="radio" name="engine" value="google"/></label>
+		<label>DuckDuckGo<input type="radio" name="engine" value="duckDuckGo"/></label>
+		<label>Bing<input type="radio" name="engine" value="bing"/></label>
+		<label>Ask<input type="radio" name="engine" value="ask"/></label>
+
+		<button>Submit!</button>
 	</form>
 
 </body>
